derive_builder/tests/compile-fail/build_fn_error.stderr
error: unrecognized derive_builder attribute
 --> tests/compile-fail/build_fn_error.rs:4:52
  |
4 | #[builder(build_fn(error(validation_error = false, path = "hello")))]
  |                                                    ^^^^

error: `error(validation_error = false)` and `validate` cannot be used together
  --> tests/compile-fail/build_fn_error.rs:10:53
   |
10 | #[builder(build_fn(error(validation_error = false), validate = "hello"))]
   |                                                     ^^^^^^^^^^^^^^^^^^

error: unrecognized derive_builder attribute
  --> tests/compile-fail/build_fn_error.rs:16:26
   |
16 | #[builder(build_fn(error(path = "hello")))]
   |                          ^^^^

error: unexpected end of input, expected nested attribute
  --> tests/compile-fail/build_fn_error.rs:22:26
   |
22 | #[builder(build_fn(error()))]
   |                          ^
